# SantiagoOld

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindMariaDB.cmake
Santiago/: LocalEndpoint.h
Santiago/Credentials/: .gitignore  CredentialServer.cpp  CredentialServer.h  MariaDBConnections.cpp  MariaDBConnections.h  Records.h  TCPConnection.cpp  TCPConnection.h  databasetestmain.cpp  main.cpp
Santiago/Fastcgi/: Acceptor.h  Common.h  ConnectionData.h  PacketSocket.h  PairParseFunctions.h  RecordSocket.h  Request.h
Santiago/Server/: Request.h  RequestHandler.h  Server.h
Santiago/WIP/: #TCPConnection.cpp#  Message.cpp  Server.cpp  Server.h  TCPConnection.cpp  TCPConnection.cpp~  TCPConnection.h  UserController.cpp  UserController.h
Santiago/test/Authentication/: CMakeLists.txt
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/Authentication/: .#ServerV1.cpp  AddResourceRequestHandler.cpp  AddResourceRequestHandler.h  CMakeLists.txt  ChangeUserPasswordRequestHandler.cpp  ChangeUserPasswordRequestHandler.h  ConnectionMessage.cpp  ConnectionMessage.h  ConnectionMessageSocket.cpp  ConnectionMessageSocket.h  ConnectionRequestsController.cpp  ConnectionRequestsController.h  ConnectionServer.cpp  ConnectionServer.h  ConnectionsServer.h  CreateUserRequestHandler.cpp  CreateUserRequestHandler.h  DatabaseInterface.cpp  DatabaseInterface.h  LoginUserRequestHandler.cpp  LoginUserRequestHandler.h  LogoutUserForAllCookiesRequestHandler.cpp  LogoutUserForAllCookiesRequestHandler.h  LogoutUserForCookieRequestHandler.cpp  LogoutUserForCookieRequestHandler.h  Makefile  Message.cpp  Message.h  RemovedCookieFromAppserverRequestHandler.cpp  RemovedCookieFromAppserverRequestHandler.h  RequestHandlerBase.h  Server.cpp  Server.h  ServerData.h  ServerMessage.cpp  ServerMessage.h  ServerV1.cpp  ServerV1.h  TCPConnection.cpp  TCPConnection.h  (+4 more)
src/lib/Database/: CMakeLists.txt  MariaDBConnections.cpp  MariaDBConnections.h  Records.h
src/lib/Fastcgi/: CMakeLists.txt  Connection.h  Dummy.cpp  PacketSocket.h  PairParseFunctions.h  RecordSocket.h  RequestData.h
src/lib/fastcgi_devkit/: CMakeLists.txt
src/test/: CMakeLists.txt  nginx.conf
src/test/Authentication/: CMakeLists.txt  MessageTest.cpp  TCPConnectionTest.cpp  client.cpp
src/test/Database/: MariaDBConnectionsTest.cpp  databasetestmain.cpp
src/test/Fastcgi/: CMakeLists.txt  Echo.cpp
test/: CMakeLists.txt
test/Fastcgi/: CMakeLists.txt  Echo.cpp
test/Server/: AsyncService.cpp  CMakeLists.txt  Echo.cpp
testbin/: FastcgiEcho
